// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoreAutocomplete.vue should create 1`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <!---->
</div>
`;

exports[`StoreAutocomplete.vue should search and clean the input 1`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <div class="store-autocomplete-panel">
    <p class="text-xs text-gray-500">
      Use the up and down arrow keys to move the selection
    </p>
    <h4>Stores</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100 bg-red-100">
          Jumbo Aalsmeer Ophelialaan
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Aalst Paul en Marjon Houben
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Aalten Leussink
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Alkmaar Duijvelshoff
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Alkmaar J. Naberstraat
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Alkmaar Paardenmarkt
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Alkmaar Winkelwaard
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Almelo Bornerbroeksestraat
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Almere Waterwijk Geinplein
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Almere-Buiten Detroitpad
        </a>
        <p class="text-sm font-semibold mt-1">
          Search limited to 10 stores. Refine search terms to make your search
          results more precise
        </p>
      </div>
    </div>
    <h4 class="mt-1">Cities</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Aalsmeer
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Aalst
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Aalten
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Alkmaar
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Almelo
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Almere
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Almere-Buiten
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Almere-Haven
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Alphen aan den Rijn
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Dalfsen
        </a>
        <p class="text-sm font-semibold mt-1">
          Search limited to 10 cities. Refine search terms to make your search
          results more precise
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`StoreAutocomplete.vue should search and clean the input 2`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <!---->
</div>
`;

exports[`StoreAutocomplete.vue should search and find no results 1`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <div class="store-autocomplete-panel">
    <p class="text-xs text-gray-500">
      Use the up and down arrow keys to move the selection
    </p>
    <h4>Stores</h4>
    <div class="ml-2">
      <div>
        <p class="text-sm font-semibold mt-1">
          Sorry we couldn't find any stores with your search term.
        </p>
      </div>
    </div>
    <h4 class="mt-1">Cities</h4>
    <div class="ml-2">
      <div>
        <p class="text-sm font-semibold mt-1">
          Sorry we couldn't find any city with your search term.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`StoreAutocomplete.vue should search and find only stores 1`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <div class="store-autocomplete-panel">
    <p class="text-xs text-gray-500">
      Use the up and down arrow keys to move the selection
    </p>
    <h4>Stores</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100 bg-red-100">
          Jumbo Amsterdam Eerste Constantijn Huygensstraat
        </a>
        <!---->
      </div>
    </div>
    <h4 class="mt-1">Cities</h4>
    <div class="ml-2">
      <div>
        <p class="text-sm font-semibold mt-1">
          Sorry we couldn't find any city with your search term.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`StoreAutocomplete.vue should search and find stores and cities 1`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <div class="store-autocomplete-panel">
    <p class="text-xs text-gray-500">
      Use the up and down arrow keys to move the selection
    </p>
    <h4>Stores</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100 bg-red-100">
          Jumbo Alkmaar Duijvelshoff
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Alkmaar J. Naberstraat
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Alkmaar Paardenmarkt
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Alkmaar Winkelwaard
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Beuningen Kalkman
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Emmen Valkenveld
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Leenderweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Nieuwe Waalreseweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Willibrorduslaan
        </a>
        <!---->
      </div>
    </div>
    <h4 class="mt-1">Cities</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Alkmaar
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Valkenswaard
        </a>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`StoreAutocomplete.vue should search and more than 10 stores 1`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <div class="store-autocomplete-panel">
    <p class="text-xs text-gray-500">
      Use the up and down arrow keys to move the selection
    </p>
    <h4>Stores</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100 bg-red-100">
          Jumbo Amsterdam Baarsjesweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Amsterdam Buikslotermeerplein
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Amsterdam Buitenveldertselaan
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Amsterdam De Aker
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Amsterdam Eerste Constantijn Huygensstraat
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Amsterdam Ferdinand Bolstraat
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Amsterdam Foodmarkt
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Amsterdam H. Jacobszstraat
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Amsterdam Oostelijke Handelskade
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Amsterdam Plein '40-'45
        </a>
        <p class="text-sm font-semibold mt-1">
          Search limited to 10 stores. Refine search terms to make your search
          results more precise
        </p>
      </div>
    </div>
    <h4 class="mt-1">Cities</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Amsterdam
        </a>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`StoreAutocomplete.vue should search and more than 10 stores and 10 cities 1`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <div class="store-autocomplete-panel">
    <p class="text-xs text-gray-500">
      Use the up and down arrow keys to move the selection
    </p>
    <h4>Stores</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100 bg-red-100">
          Jumbo Aalsmeer Ophelialaan
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Aalst Paul en Marjon Houben
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Aalten Leussink
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Alkmaar Duijvelshoff
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Alkmaar J. Naberstraat
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Alkmaar Paardenmarkt
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Alkmaar Winkelwaard
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Almelo Bornerbroeksestraat
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Almere Waterwijk Geinplein
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Almere-Buiten Detroitpad
        </a>
        <p class="text-sm font-semibold mt-1">
          Search limited to 10 stores. Refine search terms to make your search
          results more precise
        </p>
      </div>
    </div>
    <h4 class="mt-1">Cities</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Aalsmeer
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Aalst
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Aalten
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Alkmaar
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Almelo
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Almere
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Almere-Buiten
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Almere-Haven
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Alphen aan den Rijn
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Dalfsen
        </a>
        <p class="text-sm font-semibold mt-1">
          Search limited to 10 cities. Refine search terms to make your search
          results more precise
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`StoreAutocomplete.vue should search and press enter to selected item on list 1`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <!---->
</div>
`;

exports[`StoreAutocomplete.vue should search and use keydown.down to navigate in the list 1`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <div class="store-autocomplete-panel">
    <p class="text-xs text-gray-500">
      Use the up and down arrow keys to move the selection
    </p>
    <h4>Stores</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100 bg-red-100">
          Jumbo Emmen Valkenveld
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Leenderweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Nieuwe Waalreseweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Willibrorduslaan
        </a>
        <!---->
      </div>
    </div>
    <h4 class="mt-1">Cities</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Valkenswaard
        </a>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`StoreAutocomplete.vue should search and use keydown.down to navigate in the list 2`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <div class="store-autocomplete-panel">
    <p class="text-xs text-gray-500">
      Use the up and down arrow keys to move the selection
    </p>
    <h4>Stores</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Emmen Valkenveld
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100 bg-red-100">
          Jumbo Valkenswaard Leenderweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Nieuwe Waalreseweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Willibrorduslaan
        </a>
        <!---->
      </div>
    </div>
    <h4 class="mt-1">Cities</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Valkenswaard
        </a>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`StoreAutocomplete.vue should search and use keydown.down to navigate in the list 3`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <div class="store-autocomplete-panel">
    <p class="text-xs text-gray-500">
      Use the up and down arrow keys to move the selection
    </p>
    <h4>Stores</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Emmen Valkenveld
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Leenderweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100 bg-red-100">
          Jumbo Valkenswaard Nieuwe Waalreseweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Willibrorduslaan
        </a>
        <!---->
      </div>
    </div>
    <h4 class="mt-1">Cities</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Valkenswaard
        </a>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`StoreAutocomplete.vue should search and use keydown.down to navigate in the list 4`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <div class="store-autocomplete-panel">
    <p class="text-xs text-gray-500">
      Use the up and down arrow keys to move the selection
    </p>
    <h4>Stores</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Emmen Valkenveld
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Leenderweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Nieuwe Waalreseweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100 bg-red-100">
          Jumbo Valkenswaard Willibrorduslaan
        </a>
        <!---->
      </div>
    </div>
    <h4 class="mt-1">Cities</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Valkenswaard
        </a>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`StoreAutocomplete.vue should search and use keydown.down to navigate in the list 5`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <div class="store-autocomplete-panel">
    <p class="text-xs text-gray-500">
      Use the up and down arrow keys to move the selection
    </p>
    <h4>Stores</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Emmen Valkenveld
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Leenderweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Nieuwe Waalreseweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Willibrorduslaan
        </a>
        <!---->
      </div>
    </div>
    <h4 class="mt-1">Cities</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100 bg-green-100">
          Valkenswaard
        </a>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`StoreAutocomplete.vue should search and use keydown.down to navigate in the list 6`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <div class="store-autocomplete-panel">
    <p class="text-xs text-gray-500">
      Use the up and down arrow keys to move the selection
    </p>
    <h4>Stores</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100 bg-red-100">
          Jumbo Emmen Valkenveld
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Leenderweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Nieuwe Waalreseweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Willibrorduslaan
        </a>
        <!---->
      </div>
    </div>
    <h4 class="mt-1">Cities</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Valkenswaard
        </a>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`StoreAutocomplete.vue should search and use keydown.down to navigate in the list 7`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <div class="store-autocomplete-panel">
    <p class="text-xs text-gray-500">
      Use the up and down arrow keys to move the selection
    </p>
    <h4>Stores</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Emmen Valkenveld
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100 bg-red-100">
          Jumbo Valkenswaard Leenderweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Nieuwe Waalreseweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Willibrorduslaan
        </a>
        <!---->
      </div>
    </div>
    <h4 class="mt-1">Cities</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Valkenswaard
        </a>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`StoreAutocomplete.vue should search and use keydown.up to navigate in the list 1`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <div class="store-autocomplete-panel">
    <p class="text-xs text-gray-500">
      Use the up and down arrow keys to move the selection
    </p>
    <h4>Stores</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100 bg-red-100">
          Jumbo Emmen Valkenveld
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Leenderweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Nieuwe Waalreseweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Willibrorduslaan
        </a>
        <!---->
      </div>
    </div>
    <h4 class="mt-1">Cities</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Valkenswaard
        </a>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`StoreAutocomplete.vue should search and use keydown.up to navigate in the list 2`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <div class="store-autocomplete-panel">
    <p class="text-xs text-gray-500">
      Use the up and down arrow keys to move the selection
    </p>
    <h4>Stores</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Emmen Valkenveld
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Leenderweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Nieuwe Waalreseweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Willibrorduslaan
        </a>
        <!---->
      </div>
    </div>
    <h4 class="mt-1">Cities</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100 bg-green-100">
          Valkenswaard
        </a>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`StoreAutocomplete.vue should search and use keydown.up to navigate in the list 3`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <div class="store-autocomplete-panel">
    <p class="text-xs text-gray-500">
      Use the up and down arrow keys to move the selection
    </p>
    <h4>Stores</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Emmen Valkenveld
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Leenderweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Nieuwe Waalreseweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100 bg-red-100">
          Jumbo Valkenswaard Willibrorduslaan
        </a>
        <!---->
      </div>
    </div>
    <h4 class="mt-1">Cities</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Valkenswaard
        </a>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`StoreAutocomplete.vue should search and use keydown.up to navigate in the list 4`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <div class="store-autocomplete-panel">
    <p class="text-xs text-gray-500">
      Use the up and down arrow keys to move the selection
    </p>
    <h4>Stores</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Emmen Valkenveld
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Leenderweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100 bg-red-100">
          Jumbo Valkenswaard Nieuwe Waalreseweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Willibrorduslaan
        </a>
        <!---->
      </div>
    </div>
    <h4 class="mt-1">Cities</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Valkenswaard
        </a>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`StoreAutocomplete.vue should search and use keydown.up to navigate in the list 5`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <div class="store-autocomplete-panel">
    <p class="text-xs text-gray-500">
      Use the up and down arrow keys to move the selection
    </p>
    <h4>Stores</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Emmen Valkenveld
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100 bg-red-100">
          Jumbo Valkenswaard Leenderweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Nieuwe Waalreseweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Willibrorduslaan
        </a>
        <!---->
      </div>
    </div>
    <h4 class="mt-1">Cities</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Valkenswaard
        </a>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`StoreAutocomplete.vue should search and use keydown.up to navigate in the list 6`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <div class="store-autocomplete-panel">
    <p class="text-xs text-gray-500">
      Use the up and down arrow keys to move the selection
    </p>
    <h4>Stores</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100 bg-red-100">
          Jumbo Emmen Valkenveld
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Leenderweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Nieuwe Waalreseweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Willibrorduslaan
        </a>
        <!---->
      </div>
    </div>
    <h4 class="mt-1">Cities</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Valkenswaard
        </a>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`StoreAutocomplete.vue should search and use keydown.up to navigate in the list 7`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <div class="store-autocomplete-panel">
    <p class="text-xs text-gray-500">
      Use the up and down arrow keys to move the selection
    </p>
    <h4>Stores</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Emmen Valkenveld
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Leenderweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Nieuwe Waalreseweg
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Valkenswaard Willibrorduslaan
        </a>
        <!---->
      </div>
    </div>
    <h4 class="mt-1">Cities</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100 bg-green-100">
          Valkenswaard
        </a>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`StoreAutocomplete.vue should search anything and press enter 1`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <!---->
</div>
`;

exports[`StoreAutocomplete.vue should test click outside 1`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <div class="store-autocomplete-panel">
    <p class="text-xs text-gray-500">
      Use the up and down arrow keys to move the selection
    </p>
    <h4>Stores</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100 bg-red-100">
          Jumbo Aalsmeer Ophelialaan
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Aalst Paul en Marjon Houben
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Aalten Leussink
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Alkmaar Duijvelshoff
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Alkmaar J. Naberstraat
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Alkmaar Paardenmarkt
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Alkmaar Winkelwaard
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Almelo Bornerbroeksestraat
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Almere Waterwijk Geinplein
        </a><a href="#" tabindex="0" class="block hover:bg-red-100 focus:bg-red-100">
          Jumbo Almere-Buiten Detroitpad
        </a>
        <p class="text-sm font-semibold mt-1">
          Search limited to 10 stores. Refine search terms to make your search
          results more precise
        </p>
      </div>
    </div>
    <h4 class="mt-1">Cities</h4>
    <div class="ml-2">
      <div><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Aalsmeer
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Aalst
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Aalten
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Alkmaar
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Almelo
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Almere
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Almere-Buiten
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Almere-Haven
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Alphen aan den Rijn
        </a><a href="#" tabindex="0" class="block hover:bg-green-100 focus:bg-green-100">
          Dalfsen
        </a>
        <p class="text-sm font-semibold mt-1">
          Search limited to 10 cities. Refine search terms to make your search
          results more precise
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`StoreAutocomplete.vue should test click outside 2`] = `
<div class="store-autocomplete-wrapper form-group">
  <div class="form-control-icon"><input placeholder="Search stores or cities" type="text" name="search" autocomplete="off" class="form-control">
    <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
        <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
      </svg></div>
  </div>
  <!---->
</div>
`;
